# page_loader

./: .gitignore  Makefile  README.md  debug.py  pyproject.toml  setup.cfg  temp.py
.github/workflows/: pyci.yml
page_loader/: __init__.py  cli.py  editor.py  file.py  links.py  loader.py  logger.py  path.py  saver.py  url.py
page_loader/scripts/: __init__.py  page_loader.py
page_loader/settings/: logger_config.py
tests/: test_cli.py  test_download.py  test_file.py  test_file_existance.py  test_filepaths.py  test_links.py  test_local_paths.py  test_path.py  test_requests.py  test_url.py
tests/fixtures/: lessons.rss  ru-hexlet-io-courses.html  ru-hexlet-io-professions-output.html  ru-hexlet-io-professions.html
tests/fixtures/assets/: application-d9ee2c2029a7654c0bf98a128c9fee0c5977c69a56cd83fc097947e55215f6c1.js  application.css
tests/fixtures/expected/: ru-hexlet-io-professions.html
tests/fixtures/expected/ru-hexlet-io-professions_files/: ru-hexlet-io-professions.html
tests/fixtures/inputs/: ru-hexlet-io-professions.html
tests/fixtures/inputs/assets/: application.js
