[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = "Page Loader utility allows to download some page and associated files from the Web."
authors = ["n8creator <n8creator@pm.me>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
requests-mock = "^1.8.0"
beautifulsoup4 = "4.9.3"
urllib3 = "^1.26.2"
progress = "^1.5"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"
autopep8 = "^1.5.7"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
